[package]
name = "hotkeyz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
error-chain = "0.12.4"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }

[dependencies.windows]
version = "0.36.1"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "alloc",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
